--- a/App-update.json
+++ b/App-update.json
@@ -1,9 +1,8 @@
 {
-  "latestVersion": "99.0-20190316",
+  "latestVersion": "2.0-2020.05.25",
   "url": "https://github.com/DarknessMod/Kernel-Manager/blob/master/download/com.darkness.kernelmanager.apk?raw=true",
   "releaseNotes": [
     "Change-log:",
-    "- I/O: Add support to No-Merges & NR Requests.",
-    "- Misc: Other (minor) changes."
+    "- Minor improvements."
   ]
 }
