--- a/Appupdate.json
+++ b/Appupdate.json
@@ -1,6 +1,6 @@
 {
   "latestVersion": "2.0-2020.05.20",
-  "url": "https://github.com/berci07/HorizonOneS8-S8plus/blob/master/horizonManagerv2.apk",
+  "url": "https://drive.google.com/file/d/1-4e7VY2luuPArrpKDL6B_-CFWInTZcdF/view?usp=drivesdk",
   "releaseNotes": [
     "Changelog:",
     "- Minor perfomance tweak",
